#brunt-3 fix: fixed height icons in social_list on tablet

--- a/source/styles/layout/social-list.scss
+++ b/source/styles/layout/social-list.scss
@@ -1,5 +1,9 @@
 .social-list {
   &__icon {
     height: 35px;
+
+    @media screen and (min-width: $tablet-width) {
+      height: 45px;
+    }
   }
 }
